fix: add link to ingredients

--- a/3600542573016-fluid-glow/index.html
+++ b/3600542573016-fluid-glow/index.html
@@ -55,7 +55,12 @@
             alt=""
           />
         </div>
-        <a href="#" target="_blank" class="es-ingredients__link">Sprawdź</a>
+        <a
+          href="https://www.ezebra.pl/pl/products/garnier-vitamin-c-fluid-rozswietlajacy-spf50-blask-40ml-162334.html?query_id=2"
+          target="_blank"
+          class="es-ingredients__link"
+          >Sprawdź</a
+        >
       </div>
       <div class="es-ingredients__cards">
         <div class="es-ingredients__single">
