feat: change link to invisible

--- a/3600542573016-fluid-glow/index.html
+++ b/3600542573016-fluid-glow/index.html
@@ -56,7 +56,9 @@
           />
         </div>
         <a
-          href="https://www.ezebra.pl/pl/products/garnier-vitamin-c-fluid-rozswietlajacy-spf50-blask-40ml-162334.html?query_id=2"
+          href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-
+twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
+162331.html?query_id=2"
           target="_blank"
           class="es-ingredients__link"
           >Sprawdź</a
