--- a/3600542573016-fluid-glow/index.html
+++ b/3600542573016-fluid-glow/index.html
@@ -12,11 +12,10 @@
     <div class="es-kv__container">
       <div class="es-kv__photo">
         <img
-          class="b-lazy"
           src="/gfx/pol/loader.gif"
           data-src="./images/kv-left.webp"
           alt=""
-          class="es-kv__img es-kv__img--photo"
+          class="es-kv__img es-kv__img--photo b-lazy"
         />
       </div>
       <div class="es-kv__content">
@@ -30,11 +29,10 @@
         </div>
         <div class="es-kv__image">
           <img
-            class="b-lazy"
             src="/gfx/pol/loader.gif"
             data-src="./images/kv-right.webp"
             alt=""
-            class="es-kv__img"
+            class="es-kv__img b-lazy"
           />
         </div>
       </div>
@@ -48,9 +46,8 @@
         <h2 class="es-ingredients__title">wybierz swój spf</h2>
         <div class="es-ingredients__packshot">
           <img
-            class="b-lazy"
             src="/gfx/pol/loader.gif"
-            class="es-ingredients__img es-ingredients__img-packshot"
+            class="es-ingredients__img es-ingredients__img-packshot b-lazy"
             data-src="./images/packshot-active.webp"
             alt=""
           />
@@ -68,11 +65,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
         <div class="es-ingredients__single">
           <div class="es-ingredients__icon">
             <img
-              class="b-lazy"
               src="/gfx/pol/loader.gif"
               data-src="./images/icon-1.webp"
               alt=""
-              class="es-ingredients__img"
+              class="es-ingredients__img b-lazy"
             />
           </div>
           <p class="es-ingredients__text">
@@ -84,11 +80,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
         <div class="es-ingredients__single">
           <div class="es-ingredients__icon">
             <img
-              class="b-lazy"
               src="/gfx/pol/loader.gif"
               data-src="./images/icon-2.webp"
               alt=""
-              class="es-ingredients__img"
+              class="es-ingredients__img b-lazy"
             />
           </div>
           <p class="es-ingredients__text">
@@ -101,11 +96,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
         <div class="es-ingredients__single">
           <div class="es-ingredients__icon">
             <img
-              class="b-lazy"
               src="/gfx/pol/loader.gif"
               data-src="./images/icon-3.webp"
               alt=""
-              class="es-ingredients__img"
+              class="es-ingredients__img b-lazy"
             />
           </div>
           <p class="es-ingredients__text">
@@ -118,11 +112,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
         <div class="es-ingredients__single">
           <div class="es-ingredients__icon">
             <img
-              class="b-lazy"
               src="/gfx/pol/loader.gif"
               data-src="./images/icon-4.webp"
               alt=""
-              class="es-ingredients__img"
+              class="es-ingredients__img b-lazy"
             />
           </div>
           <p class="es-ingredients__text">
@@ -194,11 +187,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
       <div class="es-apply__step">
         <div class="es-apply__photo">
           <img
-            class="b-lazy"
             src="/gfx/pol/loader.gif"
             data-src="./images/step-1.webp"
             alt="Kobieta nakraplająca serum"
-            class="es-apply__img"
+            class="es-apply__img b-lazy"
           />
         </div>
         <p class="es-apply__text">Krok 1</p>
@@ -207,11 +199,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
       <div class="es-apply__step">
         <div class="es-apply__photo">
           <img
-            class="b-lazy"
             src="/gfx/pol/loader.gif"
             data-src="./images/step-2.webp"
             alt="Kobieta wmasowuje serum w okolice oczu"
-            class="es-apply__img"
+            class="es-apply__img b-lazy"
           />
         </div>
         <p class="es-apply__text">Krok 2</p>
@@ -222,11 +213,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
       <div class="es-apply__step">
         <div class="es-apply__photo">
           <img
-            class="b-lazy"
             src="/gfx/pol/loader.gif"
             data-src="./images/step-3.webp"
             alt="Dwie zadowolone kobiety"
-            class="es-apply__img"
+            class="es-apply__img b-lazy"
           />
         </div>
         <p class="es-apply__text">Krok 3</p>
@@ -248,9 +238,8 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
       </div>
       <div class="es-color__right">
         <img
-          class="b-lazy"
           src="/gfx/pol/loader.gif"
-          class="es-color__right-image"
+          class="es-color__right-image b-lazy"
           data-src="./images/color-right.webp"
           alt="Uniwersalny odcień"
         />
@@ -272,23 +261,20 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
         <a href="#" target="_blank" class="es-routine__link">Sprawdź</a>
       </div>
       <img
-        class="b-lazy"
         src="/gfx/pol/loader.gif"
-        class="es-routine__bg-img es-routine__bg-img--mobile"
+        class="es-routine__bg-img es-routine__bg-img--mobile b-lazy"
         data-src="./images/routine-bg.webp"
         alt=""
       />
       <img
-        class="b-lazy"
         src="/gfx/pol/loader.gif"
-        class="es-routine__bg-img es-routine__bg-img--desktop"
+        class="es-routine__bg-img es-routine__bg-img--desktop b-lazy"
         data-src="./images/routine-bg-d.webp"
         alt=""
       />
       <img
-        class="b-lazy"
         src="/gfx/pol/loader.gif"
-        class="es-routine__packshot"
+        class="es-routine__packshot b-lazy"
         data-src="./images/routine-packshot.webp"
         alt=""
       />
@@ -315,11 +301,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
               <div class="es-cross__packshot">
                 <a href="#" target="_blank">
                   <img
-                    class="b-lazy"
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-1.webp"
                     alt="Opakowanie Płyn micelarny z witaminą Cg"
-                    class="es-cross__img"
+                    class="es-cross__img b-lazy"
                   />
                 </a>
               </div>
@@ -337,11 +322,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
               <div class="es-cross__packshot">
                 <a href="#" target="_blank">
                   <img
-                    class="b-lazy"
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-2.webp"
                     alt="Opakowanie Rozświetlająca emulsja oczyszczająca"
-                    class="es-cross__img"
+                    class="es-cross__img b-lazy"
                   />
                 </a>
               </div>
@@ -361,11 +345,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
               <div class="es-cross__packshot">
                 <a href="#es-garnier">
                   <img
-                    class="b-lazy"
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-3.webp"
                     alt="Opakowanie Serum na przebarwienia"
-                    class="es-cross__img"
+                    class="es-cross__img b-lazy"
                   />
                 </a>
               </div>
@@ -380,11 +363,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
               <div class="es-cross__packshot">
                 <a href="#es-garnier">
                   <img
-                    class="b-lazy"
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-4.webp"
                     alt="Opakowanie Garnier rozświetlający krem pod oczy"
-                    class="es-cross__img"
+                    class="es-cross__img b-lazy"
                   />
                 </a>
               </div>
@@ -398,11 +380,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
               <div class="es-cross__packshot">
                 <a href="#es-garnier">
                   <img
-                    class="b-lazy"
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-5.webp"
                     alt="Opakowanie Fluid rozświetlający z filtrem SPF50+ Niewidoczny"
-                    class="es-cross__img"
+                    class="es-cross__img b-lazy"
                   />
                 </a>
               </div>
@@ -424,11 +405,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="es-cross__packshot">
             <a href="#" target="_blank">
               <img
-                class="b-lazy"
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-1.webp"
                 alt="Opakowanie Garnier płyn micelarny z witaminą C"
-                class="es-cross__img"
+                class="es-cross__img b-lazy"
               />
             </a>
           </div>
@@ -441,11 +421,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="es-cross__packshot">
             <a href="#" target="_blank">
               <img
-                class="b-lazy"
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-2.webp"
                 alt="Opakowanie Rozświetlająca emulsja oczyszczająca"
-                class="es-cross__img"
+                class="es-cross__img b-lazy"
               />
             </a>
           </div>
@@ -461,11 +440,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="es-cross__packshot">
             <a href="#" target="_blank">
               <img
-                class="b-lazy"
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-3.webp"
                 alt="Opakowanie Serum na przebarwienia"
-                class="es-cross__img"
+                class="es-cross__img b-lazy"
               />
             </a>
           </div>
@@ -481,11 +459,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="es-cross__packshot">
             <a href="#" target="_blank">
               <img
-                class="b-lazy"
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-4.webp"
                 alt="Opakowanie Garnier rozświetlający krem pod oczy"
-                class="es-cross__img"
+                class="es-cross__img b-lazy"
               />
             </a>
           </div>
@@ -501,11 +478,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="es-cross__packshot">
             <a href="#" target="_blank">
               <img
-                class="b-lazy"
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-5.webp"
                 alt="Opakowanie Fluid rozświetlający z filtrem SPF50+ Niewidoczny"
-                class="es-cross__img"
+                class="es-cross__img b-lazy"
               />
             </a>
           </div>
@@ -529,39 +505,35 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
   <div class="es-footer">
     <div class="es-footer__logo">
       <img
-        class="b-lazy"
         src="/gfx/pol/loader.gif"
         data-src="./images/logo-footer.webp"
         alt="Logo Garnier"
-        class="es-footer__img"
+        class="es-footer__img b-lazy"
       />
     </div>
     <div class="es-footer__wrapper">
       <div class="es-footer__icon">
         <img
-          class="b-lazy"
           src="/gfx/pol/loader.gif"
           data-src="./images/footer-1.webp"
           alt="Logo Cruelty Free International"
-          class="es-footer__img"
+          class="es-footer__img b-lazy"
         />
       </div>
       <div class="es-footer__icon">
         <img
-          class="b-lazy"
           src="/gfx/pol/loader.gif"
           data-src="./images/footer-2.webp"
           alt="Testowany na każdym odcieniu i rodzaju skóry"
-          class="es-footer__img"
+          class="es-footer__img b-lazy"
         />
       </div>
       <div class="es-footer__icon">
         <img
-          class="b-lazy"
           src="/gfx/pol/loader.gif"
           data-src="./images/footer-3.webp"
           alt="Vegańska formuła. Nie zawiera składników pochodzenia zwierzęcego"
-          class="es-footer__img"
+          class="es-footer__img b-lazy"
         />
       </div>
     </div>
