feat: fix links

--- a/3600542573016-fluid-glow/index.html
+++ b/3600542573016-fluid-glow/index.html
@@ -4,7 +4,7 @@
   rel="stylesheet"
 />
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="./style.css" />
 
 <div class="es-garnier" id="es-garnier">
   <!-- hero section-->
@@ -258,7 +258,13 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           Serum<br />
           na przebarwienia
         </p>
-        <a href="#" target="_blank" class="es-routine__link">Sprawdź</a>
+        <a
+          href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/serum/garnier-skin-
+naturals-vitamin-c-super-serum-na-przebarwienia-30ml-141731.html?query_id=2"
+          target="_blank"
+          class="es-routine__link"
+          >Sprawdź</a
+        >
       </div>
       <img
         src="/gfx/pol/loader.gif"
@@ -283,7 +289,13 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
         <p class="es-routine__step-description es-routine__step-description--2">
           Fluid rozświetlający <br />z filtrem SPF 50+ Glow
         </p>
-        <a href="#" target="_blank" class="es-routine__link">Sprawdź</a>
+        <a
+          href="https://www.ezebra.pl/pl/products/garnier-vitamin-c-fluid-rozswietlajacy-spf50-blask-
+40ml-162334.html?query_id=2"
+          target="_blank"
+          class="es-routine__link"
+          >Sprawdź</a
+        >
       </div>
     </div>
   </div>
@@ -299,7 +311,12 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="swiper-slide">
             <div class="es-cross__product">
               <div class="es-cross__packshot">
-                <a href="#" target="_blank">
+                <a
+                  href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/oczyszczanie-
+demakijaz/demakijaz-oczu/garnier-skin-naturals-vitamin-c-plyn-micelarny-400ml-
+141723.html?query_id=2"
+                  target="_blank"
+                >
                   <img
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-1.webp"
@@ -310,7 +327,9 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
               </div>
               <p class="es-cross__text">Płyn micelarny <br />z witaminą Cg</p>
               <a
-                href="#"
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/oczyszczanie-
+demakijaz/demakijaz-oczu/garnier-skin-naturals-vitamin-c-plyn-micelarny-400ml-
+141723.html?query_id=2"
                 target="_blank"
                 class="es-cross__link es-cross__link--1"
                 >Sprawdź</a
@@ -320,7 +339,11 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="swiper-slide">
             <div class="es-cross__product">
               <div class="es-cross__packshot">
-                <a href="#" target="_blank">
+                <a
+                  href="https://www.ezebra.pl/pl/products/garnier-skin-naturals-rozswietlajaca-emulsja-
+oczyszczajaca-250ml-162340.html?query_id=2"
+                  target="_blank"
+                >
                   <img
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-2.webp"
@@ -333,7 +356,8 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
                 Rozświetlająca <br />emulsja oczyszczająca
               </p>
               <a
-                href="#"
+                href="https://www.ezebra.pl/pl/products/garnier-skin-naturals-rozswietlajaca-emulsja-
+oczyszczajaca-250ml-162340.html?query_id=2"
                 target="_blank"
                 class="es-cross__link es-cross__link--2"
                 >Sprawdź</a
@@ -343,7 +367,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="swiper-slide">
             <div class="es-cross__product">
               <div class="es-cross__packshot">
-                <a href="#es-garnier">
+                <a
+                  href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/serum/garnier-skin-
+naturals-vitamin-c-super-serum-na-przebarwienia-30ml-141731.html?query_id=2"
+                >
                   <img
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-3.webp"
@@ -353,7 +380,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
                 </a>
               </div>
               <p class="es-cross__text">Serum na przebarwienia</p>
-              <a href="#es-garnier" class="es-cross__link es-cross__link--3"
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/serum/garnier-skin-
+naturals-vitamin-c-super-serum-na-przebarwienia-30ml-141731.html?query_id=2"
+                class="es-cross__link es-cross__link--3"
                 >Sprawdź</a
               >
             </div>
@@ -361,7 +391,10 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
           <div class="swiper-slide">
             <div class="es-cross__product">
               <div class="es-cross__packshot">
-                <a href="#es-garnier">
+                <a
+                  href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/kremy-pod-
+oczy/garnier-skin-naturals-vitamin-c-rozswietlajacy-krem-pod-oczy-15ml-151976.html?query_id=2"
+                >
                   <img
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-4.webp"
@@ -372,13 +405,22 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
               </div>
               <p class="es-cross__text">Rozświetlający krem pod oczy</p>
 
-              <a href="#es-garnier" class="es-cross__link">Sprawdź</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/kremy-pod-
+oczy/garnier-skin-naturals-vitamin-c-rozswietlajacy-krem-pod-oczy-15ml-151976.html?query_id=2"
+                class="es-cross__link"
+                >Sprawdź</a
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div class="es-cross__product">
               <div class="es-cross__packshot">
-                <a href="#es-garnier">
+                <a
+                  href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-
+twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
+162331.html?query_id=2"
+                >
                   <img
                     src="/gfx/pol/loader.gif"
                     data-src="./images/cross-5.webp"
@@ -393,7 +435,13 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
                 Niewidoczny
               </p>
 
-              <a href="#es-garnier" class="es-cross__link">Sprawdź</a>
+              <a
+                href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-
+twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
+162331.html?query_id=2"
+                class="es-cross__link"
+                >Sprawdź</a
+              >
             </div>
           </div>
         </div>
@@ -403,7 +451,12 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
       <div class="es-cross__container">
         <div class="es-cross__product">
           <div class="es-cross__packshot">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/oczyszczanie-
+demakijaz/demakijaz-oczu/garnier-skin-naturals-vitamin-c-plyn-micelarny-400ml-
+141723.html?query_id=2"
+              target="_blank"
+            >
               <img
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-1.webp"
@@ -413,13 +466,22 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
             </a>
           </div>
           <p class="es-cross__text">Płyn micelarny <br />z witaminą Cg</p>
-          <a href="#" target="_blank" class="es-cross__link es-cross__link--1"
+          <a
+            href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/oczyszczanie-
+demakijaz/demakijaz-oczu/garnier-skin-naturals-vitamin-c-plyn-micelarny-400ml-
+141723.html?query_id=2"
+            target="_blank"
+            class="es-cross__link es-cross__link--1"
             >Sprawdź</a
           >
         </div>
         <div class="es-cross__product">
           <div class="es-cross__packshot">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.ezebra.pl/pl/products/garnier-skin-naturals-rozswietlajaca-emulsja-
+oczyszczajaca-250ml-162340.html?query_id=2"
+              target="_blank"
+            >
               <img
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-2.webp"
@@ -432,13 +494,21 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
             Rozświetlająca <br />
             emulsja oczyszczająca
           </p>
-          <a href="#" target="_blank" class="es-cross__link es-cross__link--1"
+          <a
+            href="https://www.ezebra.pl/pl/products/garnier-skin-naturals-rozswietlajaca-emulsja-
+oczyszczajaca-250ml-162340.html?query_id=2"
+            target="_blank"
+            class="es-cross__link es-cross__link--1"
             >Sprawdź</a
           >
         </div>
         <div class="es-cross__product">
           <div class="es-cross__packshot">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/serum/garnier-skin-
+naturals-vitamin-c-super-serum-na-przebarwienia-30ml-141731.html?query_id=2"
+              target="_blank"
+            >
               <img
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-3.webp"
@@ -451,13 +521,21 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
             Serum na <br />
             przebarwienia
           </p>
-          <a href="#" target="_blank" class="es-cross__link es-cross__link--1"
+          <a
+            href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/serum/garnier-skin-
+naturals-vitamin-c-super-serum-na-przebarwienia-30ml-141731.html?query_id=2"
+            target="_blank"
+            class="es-cross__link es-cross__link--1"
             >Sprawdź</a
           >
         </div>
         <div class="es-cross__product">
           <div class="es-cross__packshot">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/kremy-pod-
+oczy/garnier-skin-naturals-vitamin-c-rozswietlajacy-krem-pod-oczy-15ml-151976.html?query_id=2"
+              target="_blank"
+            >
               <img
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-4.webp"
@@ -470,13 +548,22 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
             Rozświetlający <br />
             krem pod oczy
           </p>
-          <a href="#" target="_blank" class="es-cross__link es-cross__link--1"
+          <a
+            href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-twarzy/kremy-pod-
+oczy/garnier-skin-naturals-vitamin-c-rozswietlajacy-krem-pod-oczy-15ml-151976.html?query_id=2"
+            target="_blank"
+            class="es-cross__link es-cross__link--1"
             >Sprawdź</a
           >
         </div>
         <div class="es-cross__product">
           <div class="es-cross__packshot">
-            <a href="#" target="_blank">
+            <a
+              href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-
+twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
+162331.html?query_id=2"
+              target="_blank"
+            >
               <img
                 src="/gfx/pol/loader.gif"
                 data-src="./images/cross-5.webp"
@@ -490,7 +577,12 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
             z filtrem SPF50+ <br />
             Niewidoczny
           </p>
-          <a href="#" target="_blank" class="es-cross__link es-cross__link--1"
+          <a
+            href="https://www.ezebra.pl/pl/products/pielegnacja/pielegnacja-
+twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
+162331.html?query_id=2"
+            target="_blank"
+            class="es-cross__link es-cross__link--1"
             >Sprawdź</a
           >
         </div>
@@ -539,7 +631,7 @@ twarzy/kremy/garnier-vitamin-c-fluid-rozswietlajacy-spf50-niewidoczny-40ml-
     </div>
   </div>
 </div>
-<script data-src="slider.js"></script>
+<script src="./slider.js"></script>
 <script>
   var swiper = new Swiper('.swiper', {
     loop: true,
